# Imagen-API

./: .dockerignore  .eslintrc.cjs  .gcloudignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
.api/: routers.js  server.js
shieldgemma2/: .dockerignore  container.py  instances.json  main.py  predictor.py  pyproject.toml  requirements.txt
src/: App.jsx  BrushSize.jsx  EditPromptDialog.jsx  Gemini.jsx  ImageEditDialog.jsx  Imagen2.css  Imagen2.jsx  LoadingSpinner.jsx  Markdown.jsx  MaskClasses.js  MaskEditor.css  MaskEditor.jsx  MaskEditorDefaults.js  ScribbleDialog.jsx  ToMask.js  index.css  main.jsx
src/api/: generate-image.js
